docs/samples/invalid/undeclared_variable_example.edl
// Expected error: use of undeclared variable y.
let x: int = y + 1;
print(x);
